// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div class="zv-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="true" class="zv-checkbox">
    <div class="zv-checkbox__icon zv-checkbox__icon--round zv-checkbox__icon--checked"><i class="zv-icon zv-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="zv-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="true" class="zv-checkbox">
    <div class="zv-checkbox__icon zv-checkbox__icon--round zv-checkbox__icon--checked"><i class="zv-icon zv-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="zv-checkbox__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div class="zv-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox">
    <div class="zv-checkbox__icon zv-checkbox__icon--round" style="font-size: 10rem;"><i class="zv-icon zv-icon-success">
        <!----></i></div><span class="zv-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox">
    <div class="zv-checkbox__icon zv-checkbox__icon--round" style="font-size: 5rem;"><i class="zv-icon zv-icon-success">
        <!----></i></div><span class="zv-checkbox__label">label</span>
  </div>
</div>
`;

exports[`label disabled 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="zv-checkbox zv-checkbox--label-disabled">
  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
      <!----></i></div><span class="zv-checkbox__label">Label</span>
</div>
`;

exports[`label-position prop 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="zv-checkbox"><span class="zv-checkbox__label zv-checkbox__label--left">Label</span>
  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
      <!----></i></div>
</div>
`;
